--- a/git_test/RabbitMQ_Demo/pom.xml
+++ b/git_test/RabbitMQ_Demo/pom.xml
@@ -15,6 +15,8 @@
             <artifactId>amqp-client</artifactId>
             <version>5.6.0</version>
         </dependency>
+        <dependency>
+        </dependency>
     </dependencies>
 
 </project>
