--- a/git_test/RabbitMQ_Demo/pom.xml
+++ b/git_test/RabbitMQ_Demo/pom.xml
@@ -17,6 +17,8 @@
         </dependency>
         <dependency>
         </dependency>
+        <dependency>
+        </dependency>
     </dependencies>
 
 </project>
